--- a/.github/workflows/Release2.yml
+++ b/.github/workflows/Release2.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          name: ${{ github.ref_name }}
+          name: Release
           generate_release_notes: true
           files: app/build/outputs/apk/release/app-release-unsigned.apk
           draft: false
